# langchain_training

./: .env.example  .gitignore  pyproject.toml  readme.MD
1_chat_models/: 1_chat_models_basic.py  2_chat_model_basic_conversation.py  3_chat_model_conversation_with_user.py  5_chat_models_save_message_history_firebase.py
2_prompt_templates/: 1_prompt_templates_basic.py  2_prompt_template_with_chat_models.py
3_chains/: 1_chains_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_paralell.py  5_chains_branching.py
